# MPointers-2.0

./: CMakeLists.txt  README.md  compile_protos.sh
proto/: memman.proto
src/: client.cpp  main.cpp
src/MPointers/: LinkedList.h  MPointers.h
src/Memory_Manager/: memman.cpp  memman.h
src/Server/: server.cpp  server.h  starter.cpp
